# DiscordCoreLoader

./: .gitignore  CMakeLists.txt  Config.json  ReadMe.md
CMake/: avx_detection.cpp
CMake/Find-Scripts/: FindNlohmannJson.cmake  FindOpenSSL.cmake  FindSIMDJSON.cmake
Certs/: Cert.pem  Key.pem
Executable/: CMakeLists.txt
Include/discordcoreloader/: ConfigParser.hpp  DataParsingFunctions.hpp  DiscordCoreClient.hpp  ErlPacker.hpp  ErlParser.hpp  Etf.hpp  FoundationEntities.hpp  Hash.hpp  JSONIfier.hpp  JsonSpecializations.hpp  MessageHolder.hpp  ObjectGenerator.hpp  Randomizer.hpp  RingBuffer.hpp  SSLClients.hpp  TCPConnection.hpp  UnorderedMap.hpp  WebSocketEntities.hpp
Source/: ConfigParser.cpp  DataParsingFunctions.cpp  DiscordCoreClient.cpp  ErlPacker.cpp  ErlParser.cpp  FoundationEntities.cpp  JSONIFier.cpp  Main.cpp  MessageHolder.cpp  ObjectGenerator.cpp  Randomizer.cpp  SSLClients.cpp  WebSocketEntities.cpp
